--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
   sphinx:
     image: sphinxdoc/sphinx
     volumes:
-      - ./Users/magic/PycharmProjects/mydocs:/docs
+      - /Users/magic/PycharmProjects/mydocs:/docs
     restart: always
