--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/apt/lists:/var/lib/apt/lists
     restart: unless-stopped
+    command: bash -c "apt-get update && apt-get install -y python3-pip && pip3 install -U sphinx"
 
   sphinx:
     image: sphinxdoc/sphinx:4.1.2
