Сфинкс установлен в контейнер Дженкинс

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,16 @@ services:
     image: jenkins/jenkins
     ports:
       - 8080:8080
+    user: root
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/apt/lists:/var/lib/apt/lists
     restart: unless-stopped
-    command: bash -c "apt-get update && apt-get install -y python3-pip && pip3 install -U sphinx"
+    entrypoint: /bin/bash -c "apt-get update && apt-get install -y python3-pip make && pip3 install -U sphinx==3.5.4 && /usr/local/bin/jenkins.sh"
 
   sphinx:
-    image: sphinxdoc/sphinx:4.1.2
+    image: sphinxdoc/sphinx:3.5.4
     volumes:
       - .:/docs
 
