--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/apt/lists:/var/lib/apt/lists
+      - ./requirements.txt:/var/jenkins_home/requirements.txt
     restart: unless-stopped
-    entrypoint: /bin/bash -c "apt-get update && apt-get install -y python3-pip make && pip3 install -U sphinx==3.5.4 && /usr/local/bin/jenkins.sh"
+    entrypoint: /bin/bash -c "apt-get update && apt-get install -y python3-pip make && pip3 install -r /var/jenkins_home/requirements.txt && /usr/local/bin/jenkins.sh"
 
   sphinx:
     image: sphinxdoc/sphinx:3.5.4
