--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3'
 services:
   jenkins:
-    image: jenkins/jenkins
+    build:
+      context: .
+      dockerfile: Dockerfile.jenkins
     ports:
       - 8080:8080
-    user: root
     volumes:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/apt/lists:/var/lib/apt/lists
     restart: unless-stopped
-    entrypoint: /bin/bash -c "apt-get update && apt-get install -y python3-pip make && pip3 install --upgrade pip && /usr/local/bin/jenkins.sh"
+    entrypoint: /sbin/tini -- /usr/local/bin/jenkins.sh
 
   site_documentation:
     image: nginx
