Исправление ошибки загрузки docker-ce-cli

--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,7 +2,7 @@ FROM jenkins/jenkins
 
 USER root
 
-# Установка Docker
+# Установка Docker CLI
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
@@ -21,4 +21,3 @@ RUN apt-get update && apt-get install -y docker-ce-cli
 # Другие необходимые пакеты и настройки
 
 USER jenkins
-
