--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,7 +2,7 @@ FROM jenkins/jenkins
 
 USER root
 
-# Установка Docker CLI
+# Установка Docker CLI и docker-buildx-plugin
 RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
@@ -16,7 +16,7 @@ RUN echo \
     "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
     $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-RUN apt-get update && apt-get install -y docker-ce-cli
+RUN apt-get update && apt-get install -y docker-buildx-plugin
 
 # Другие необходимые пакеты и настройки
 
