--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,22 +2,6 @@ FROM jenkins/jenkins
 
 USER root
 
-# Установка Docker CLI и docker-buildx-plugin
-RUN apt-get update && apt-get install -y \
-    apt-transport-https \
-    ca-certificates \
-    curl \
-    gnupg \
-    lsb-release
-
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-
-RUN echo \
-    "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
-    $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-
-RUN apt-get update && apt-get install -y docker-buildx-plugin
-
-# Другие необходимые пакеты и настройки
+RUN apt-get update && apt-get install -y python3-pip
 
 USER jenkins
