Вот обновленный Docker Compose файл, который использует общий том для хранения данных сборки В этом файле был добавлен раздел volumes, где определен том jenkins_home. Этот том будет использоваться для хранения данных сборки Jenkins. Затем в контейнере site_documentation используется том jenkins_home с псевдонимом /jenkins_data, чтобы можно было получить доступ к данным сборки из этого контейнера.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - 8080:8080
     user: root
     volumes:
-      - ./jenkins_home:/var/jenkins_home
+      - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/apt/lists:/var/lib/apt/lists
     restart: unless-stopped
@@ -17,4 +17,8 @@ services:
     ports:
       - 8000:80
     volumes:
+      - jenkins_home:/jenkins_data
       - ./build/html:/usr/share/nginx/html
+
+volumes:
+  jenkins_home:
