В этом примере добавлен новый сервис с именем docker, использующий образ Docker. Также добавлено монтирование /var/run/docker.sock внутрь контейнера для доступа к Docker-демону.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,10 @@ services:
       - jenkins_home:/jenkins_data
       - ./build/html:/usr/share/nginx/html
 
+  docker:
+    image: docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
 volumes:
   jenkins_home:
