--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - 8000:80
     volumes:
       - jenkins_home:/jenkins_data
-      - nginx_html:/usr/share/nginx/html
+      - ./jenkins_data/workspace/docsbuild/build/html:/usr/share/nginx/html
 
 volumes:
   jenkins_home:
